--- a/FirstMicroservice/src/main/resources/application.properties
+++ b/FirstMicroservice/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=8081
 spring.jackson.time-zone: Europe/Budapest
-spring.jackson.date-format=yyyy-mm-dd
+spring.jackson.date-format=yyyy-MM-dd
