--- a/FirstMicroservice/pom.xml
+++ b/FirstMicroservice/pom.xml
@@ -44,6 +44,12 @@
   			<artifactId>joda-time</artifactId>
   			<version>2.10.9</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
